melhorias, controlando a execução da cobertura ou não